# Gst-editing-services

./: .gitlab-ci.yml  configure.ac  meson.build
bindings/python/gi/overrides/: GES.py
docs/: meson.build
docs/design/: make_timestamp_rate_based.md
ges/: ges-base-xml-formatter.c  ges-clip.c  ges-container.c  ges-formatter.c  ges-group.c  ges-image-source.c  ges-internal.h  ges-layer.c  ges-layer.h  ges-project.c  ges-project.h  ges-source-clip.c  ges-structured-interface.c  ges-time-code.c  ges-time-code.h  ges-timeline-element.c  ges-timeline-element.h  ges-timeline-tree.c  ges-timeline-tree.h  ges-timeline.c  ges-timeline.h  ges-title-clip.c  ges-track-element-asset.c  ges-track-element-asset.h  ges-track-element.c  ges-track.c  ges-types.h  ges-uri-asset.c  ges-uri-clip.c  ges-video-uri-source.c  ges.c  gstframepositioner.c  gstframepositioner.h  meson.build
plugins/: meson.build
plugins/python/: gesgstplugin.py  meson.build
tests/benchmarks/: timeline.c
tests/check/: meson.build
tests/check/ges/: layer.c  test-utils.h  timecode.c  timelineedition.c
tests/check/python/: common.py  test_frame_accurate_apis.py  test_group.py  test_timeline.py
tests/validate/: geslaunch.py
tools/: ges-launch.c  ges-launcher.c
